# hookecho

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
android/: README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
crates/hookecho/: Cargo.toml  build.rs
crates/hookecho/data/colortables/: PHI.pal  REF.pal  RHO.pal  SW.pal  VEL.pal  ZDR.pal
crates/hookecho/src/: app.rs  audio.rs  basemap_style.rs  colormap.rs  dialog.rs  digest.rs  events.rs  geo.rs  gps.rs  headless.rs  hotkeys.rs  icon.rs  lib.rs  loopexport.rs  main.rs  overlay_build.rs  paths.rs  platform.rs  render3d.rs  settings.rs  theme.rs  tiles.rs  timeline.rs  tray.rs  vector_tiles.rs  view.rs
crates/hookecho/src/app/: mobile.rs
crates/hookecho/src/render/: mercator.rs  mod.rs
crates/hookecho/src/shaders/: mrms.wgsl  overlay.wgsl  radar.wgsl  raymarch.wgsl  tiles.wgsl
crates/hookecho/src/ui/: afd_window.rs  alert_panel.rs  cappi_window.rs  cell_window.rs  detail_window.rs  digest_window.rs  event_window.rs  hodograph_window.rs  legend.rs  marker_window.rs  mod.rs  palette_editor.rs  placefile_window.rs  sensor_window.rs  settings_window.rs  site_dialog.rs  sounding_window.rs  toolbox.rs  volume3d_window.rs  warning_window.rs  wizard.rs  xsection_window.rs
crates/nexrad-level3/: Cargo.toml
crates/nexrad-level3/src/: lib.rs
crates/nexrad-level3/tests/: gen_golden.py  golden.rs
crates/nexrad-level3/tests/data/: dvl_tlx.golden.json  dvl_tlx.l3  eet_tlx.golden.json  eet_tlx.l3  nmd_tlx.l3  nst_tlx.golden.json  nst_tlx.l3
crates/wxdata/: Cargo.toml
crates/wxdata/src/: afd.rs  alerts.rs  archive_warnings.rs  aviation.rs  dealias.rs  hrrr.rs  level2.rs  level3.rs  lib.rs  live.rs  lsr.rs  metar.rs  mrms.rs  obs.rs  overlay.rs  placefile.rs  probsevere.rs  sounding.rs  spc.rs  spotters.rs  tds.rs  torclimo.rs  tropical.rs  volume3d.rs  xsection.rs
packaging/: build-appimage.sh  hookecho.desktop
packaging/windows/: hookecho.iss  main.wxs
