[package]
name = "hookecho"
description = "Hook Echo-WX — advanced NEXRAD weather radar viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hookecho"
path = "src/main.rs"

[dependencies]
wxdata = { path = "../wxdata" }
# Base eframe (all platforms); Linux windowing backends are added target-conditionally below so
# Windows/macOS builds don't pull the Linux-only wayland/x11 deps.
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.35"
egui_extras = "0.35"
egui-wgpu = "0.35"
wgpu = "29"
bytemuck.workspace = true
anyhow.workspace = true
tokio.workspace = true
log.workspace = true
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
lru.workspace = true
lyon = "1.0.19"
rfd = "0.15"
mvt-reader = "2.4"
geo-types = "0.7"
flate2.workspace = true
rodio = { version = "0.19", default-features = false }
glam = { version = "0.29", features = ["bytemuck"] }

# Linux windowing backends (Wayland + X11). Feature-unioned onto the base eframe above, so only
# Linux builds pull them; Windows/macOS use their native winit backends.
# ksni gives a pure-D-Bus StatusNotifier tray icon (KDE/freedesktop) without a GTK loop.
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["wayland", "x11"] }
ksni = { version = "0.3", features = ["blocking"] }
