[package]
name = "wxdata"
description = "Weather radar data acquisition and domain model for Hook Echo-WX"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nexrad-level3 = { path = "../nexrad-level3" }
# Vendored via [patch.crates-io] in the workspace Cargo.toml — see the note there. Its HTTP
# client is patched to use webpki-roots TLS so AWS S3 fetches work on Android.
nexrad-data = "1.0.0-rc.7"
nexrad-model = "1.0.0-rc.2"
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
lru.workspace = true
directories.workspace = true
log.workspace = true
geojson = "1.0.0"
gribberish = "1.5.0"
